--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-pdf/renderer": "^4.1.6",
     "@tanstack/react-table": "^8.20.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
