--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "next": "15.0.3",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
