--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "1.0.0",
     "date-fns": "2.28.0",
     "framer-motion": "^11.16.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.464.0",
     "next": "15.0.3",
     "next-auth": "5.0.0-beta.25",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20.17.12",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
