--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "2.28.0",
     "framer-motion": "^11.16.3",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.464.0",
     "next": "15.0.3",
     "next-auth": "5.0.0-beta.25",
