--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "1.0.0",
     "date-fns": "2.28.0",
     "framer-motion": "^11.16.3",
+    "i18next": "^24.2.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.464.0",
@@ -58,6 +59,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
     "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
@@ -71,10 +73,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/i18next": "^12.1.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20.17.12",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-i18next": "^7.8.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
