--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.1.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dnd": "^16.0.1",
@@ -76,6 +77,7 @@
     "@types/i18next": "^12.1.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20.17.16",
+    "@types/puppeteer": "^7.0.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-i18next": "^7.8.3",
