--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,9 @@ next-env.d.ts
 */migrations
 /data
 *.note*
-*/assets
+
+# Ignore public folder
+/public/assets/avatar-profile/*
+!public/assets/avatar-profile/.gitkeep
+/public/assets/pdf/*
+!public/assets/pdf/.gitkeep
