--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:seed": "prisma db seed"
-  },
-  "prisma": {
-    "seed": "ts-node -r tsconfig-paths/register --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "prisma:seed": "prisma db seed",
+    "list-pages": "ts-node -P tsconfig.script.json -r tsconfig-paths/register src/utils/list-all-pages.ts"
   },
   "dependencies": {
     "@auth/core": "^0.37.4",
