--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prisma:seed": "prisma db seed",
     "list-pages": "ts-node -P tsconfig.script.json -r tsconfig-paths/register src/utils/list-all-pages.ts"
   },
+  "prisma": {
+    "seed": "ts-node -r tsconfig-paths/register --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/core": "^0.37.4",
     "@auth/prisma-adapter": "^2.7.4",
