CTC | Zip Download

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "i18next": "^24.2.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.464.0",
