--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-use": "^17.6.0",
