--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
+    "react-tagcloud": "^2.3.3",
     "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
@@ -89,6 +90,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-i18next": "^7.8.3",
+    "@types/react-tagcloud": "^2.3.2",
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.1",
