--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-easy-crop": "^5.2.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-tagcloud": "^2.3.3",
