added in gitignore dockerignore, changed sequence in docker-compose.yaml, removed docker-entrypoint.sh

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ next-env.d.ts
 # Except dummy.pdf in public/assets/pdf
 !public/assets/default/issued-ctc/dummy.pdf
 .history
+
+
+/docker-data
+/public
