--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@faker-js/faker": "^9.4.0",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -98,10 +98,15 @@
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.1",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.0",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@prisma/client"
+    ]
   }
 }
